# sequence-mining

./: LICENSE  README.md  pyproject.toml  requirements.txt
span/: bitmap.py  prefix.py  span.py
src/sequence_mining/: bitmap.py  prefix.py  spam.py
